--- a/lang/en.json
+++ b/lang/en.json
@@ -126,19 +126,19 @@
     "WFRP4eEndeavours.Link.Penance": "Penance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penance}",
     "WFRP4eEndeavours.Link.UnusualWeapon": "Train with Unusual Weapon.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v5Ak1SpPFI1w103T]{Train with Unusual Weapon}",
     "WFRP4eEndeavours.Link.MagicItem": "Test Magic Item.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ylLwAYTLTIFHA0Yw]{Test Magic Item}",
-    "WFRP4eEndeavours.Link.Alcatini": "Alcatini Method.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{Alcatini Method}",
-    "WFRP4eEndeavours.Link.Punchausen": "Count Punchausen's Narrative Auction.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aDttKH3qyNCR6iGf]{Count Punchausen's Narrative Auction}",
-    "WFRP4eEndeavours.Link.Fanmaris": "Fanmaris's Perfect Shot.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{Fanmaris's Perfect Shot}",
-    "WFRP4eEndeavours.Link.Leitdorf": "The Leitdorf Defence.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RUhxuIyB9dMVRRit]{The Leitdorf Defence}",
-    "WFRP4eEndeavours.Link.Quartermaster": "The Quartermaster Shuffle.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RFeMoXNQ6qpYPwgG]{Find a Job} and @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v1Ax92hFkPuR4xTz]{Do the Job}",
-    "WFRP4eEndeavours.Link.Brew": "Brew Potion.",
-    "WFRP4eEndeavours.Link.Ingredients": "Gather Ingredients.",
-    "WFRP4eEndeavours.Link.Familiar": "Improve Familiar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.m8x4xAhvCFrBYcmB]{Improve Familiar}",
-    "WFRP4eEndeavours.Link.Ritual": "Perform Ritual.",
-    "WFRP4eEndeavours.Link.Mapmaking": "Mapmaking.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kkZVd242H3PYmgiq]{Mapmaking}",
-    "WFRP4eEndeavours.Link.Trade": "Opportune Trade.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5Hm6KR2gxcZAyZML]{Opportune Trade}",
-    "WFRP4eEndeavours.Link.Ship": "Ship Maintenance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RAhGd9iU42ugyzTB]{Ship Maintenance}",
-    "WFRP4eEndeavours.Link.Crew": "Train Crew.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.M0E7H5NukVRD734B]{Train Crew}",
+    "WFRP4eEndeavours.Link.Alcatini": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#alcatini-method]{Alcatini Method}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{Alcatini Method}",
+    "WFRP4eEndeavours.Link.Punchausen": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#count-punchausens-narrative-auction]{Count Punchausen's Narrative Auction}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aDttKH3qyNCR6iGf]{Count Punchausen's Narrative Auction}",
+    "WFRP4eEndeavours.Link.Fanmaris": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#fanmariss-perfect-shot]{Fanmaris's Perfect Shot}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{Fanmaris's Perfect Shot}",
+    "WFRP4eEndeavours.Link.Leitdorf": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#the-leitdorf-defence]{The Leitdorf Defence}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RUhxuIyB9dMVRRit]{The Leitdorf Defence}",
+    "WFRP4eEndeavours.Link.Quartermaster": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#the-quartermaster-shuffle]{The Quartermaster Shuffle}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RFeMoXNQ6qpYPwgG]{Find a Job} and @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v1Ax92hFkPuR4xTz]{Do the Job}",
+    "WFRP4eEndeavours.Link.Brew": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.hS8fXNOVs0vTvpiD]{Brew Potion}.",
+    "WFRP4eEndeavours.Link.Ingredients": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.Ag868FaKOQnRTder]{Gather Ingredients}.",
+    "WFRP4eEndeavours.Link.Familiar": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.MHvpBYGLCbhsS1jb]{Improve Familiar}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.m8x4xAhvCFrBYcmB]{Improve Familiar}",
+    "WFRP4eEndeavours.Link.Ritual": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.cA1Vf1DUTSKnit1E]{Perform Ritual}.",
+    "WFRP4eEndeavours.Link.Mapmaking": "@UUID[JournalEntry.23L6RBHmImnMR9Ir.JournalEntryPage.QxgO7D6j0pWxRfwG#mapmaking]{Mapmaking}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kkZVd242H3PYmgiq]{Mapmaking}",
+    "WFRP4eEndeavours.Link.Trade": "@UUID[JournalEntry.23L6RBHmImnMR9Ir.JournalEntryPage.QxgO7D6j0pWxRfwG#opportune-trade]{Opportune Trade}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5Hm6KR2gxcZAyZML]{Opportune Trade}",
+    "WFRP4eEndeavours.Link.Ship": "@UUID[JournalEntry.23L6RBHmImnMR9Ir.JournalEntryPage.QxgO7D6j0pWxRfwG#ship-maintenance]{Ship Maintenance}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RAhGd9iU42ugyzTB]{Ship Maintenance}",
+    "WFRP4eEndeavours.Link.Crew": "@UUID[JournalEntry.23L6RBHmImnMR9Ir.JournalEntryPage.QxgO7D6j0pWxRfwG#train-crew]{Train Crew}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.M0E7H5NukVRD734B]{Train Crew}",
     "WFRP4eEndeavours.Link.Deforestation": "Deforestation.</b></h3><p>Maybe @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.gNUdm6x4ko6L4BJg]{Double Shifts} and/or @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Z3IVWcZ3BesTlXWV]{Leading Woodcutters}",
     "WFRP4eEndeavours.Link.Ancients": "Attuning With the Ancients.",
     "WFRP4eEndeavours.Link.Boatbuilding": "Boatbuilding.",
