--- a/lang/es.json
+++ b/lang/es.json
@@ -117,7 +117,7 @@
     "WFRP4eEndeavours.Link.Forage": "Forrajear.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forrajear}",
     "WFRP4eEndeavours.Link.Information": "Recopilar informaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Recopilar informaci\u00F3n}",
     "WFRP4eEndeavours.Link.Watch": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Montar guardia}",
-    "WFRP4eEndeavours.Link.Map": "Trazar la ruta.",
+    "WFRP4eEndeavours.Link.Map": Trazar la ruta.",
     "WFRP4eEndeavours.Link.Practice": "Practicar una habilidad.",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperar.",
     "WFRP4eEndeavours.Link.Camp": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Acampar}",
@@ -126,19 +126,19 @@
     "WFRP4eEndeavours.Link.Penance": "Penitencia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penitencia}",
     "WFRP4eEndeavours.Link.UnusualWeapon": "Entrenar con arma inusual.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v5Ak1SpPFI1w103T]{Entrenar con arma inusual}",
     "WFRP4eEndeavours.Link.MagicItem": "Probar objeto m\u00E1gico.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ylLwAYTLTIFHA0Yw]{Probar objeto m\u00E1gico]",
-    "WFRP4eEndeavours.Link.Alcatini": "M\u00E9todo Alcatini.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{M\u00E9todo Alcatini}",
-    "WFRP4eEndeavours.Link.Punchausen": "Subasta narrativa del Conde Punchausen.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aDttKH3qyNCR6iGf]{Subasta narrativa del Conde Punchausen}",
-    "WFRP4eEndeavours.Link.Fanmaris": "El disparo perfecto de Fanmaris.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{El disparo perfecto de Fanmaris}",
-    "WFRP4eEndeavours.Link.Leitdorf": "La defensa Leitdorf.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RUhxuIyB9dMVRRit]{La defensa Leitdorf}",
-    "WFRP4eEndeavours.Link.Quartermaster": "Lo que el intendente traspapel\u00F3.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RFeMoXNQ6qpYPwgG]{Encontrar un trabajo} y @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v1Ax92hFkPuR4xTz]{Hacer el trabajo}",
-    "WFRP4eEndeavours.Link.Brew": "Preparar poci\u00F3n.",
-    "WFRP4eEndeavours.Link.Ingredients": "Reunir ingredientes.",
-    "WFRP4eEndeavours.Link.Familiar": "Mejorar familiar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.m8x4xAhvCFrBYcmB]{Mejorar familiar}",
-    "WFRP4eEndeavours.Link.Ritual": "Realizar ritual.",
-    "WFRP4eEndeavours.Link.Mapmaking": "Creaci\u00F3n de mapas.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kkZVd242H3PYmgiq]{Creaci\u00F3n de mapas}",
-    "WFRP4eEndeavours.Link.Trade": "Comercio oportuno.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5Hm6KR2gxcZAyZML]{Comercio oportuno}",
-    "WFRP4eEndeavours.Link.Ship": "Mantenimiento del barco.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RAhGd9iU42ugyzTB]{Mantenimiento del barco}",
-    "WFRP4eEndeavours.Link.Crew": "Entrenar tripulaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.M0E7H5NukVRD734B]{Entrenar tripulaci\u00F3n}",
+    "WFRP4eEndeavours.Link.Alcatini": @UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#alcatini-method]{"M\u00E9todo Alcatini}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{M\u00E9todo Alcatini}",
+    "WFRP4eEndeavours.Link.Punchausen": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#count-punchausens-narrative-auction]{Subasta narrativa del Conde Punchausen}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aDttKH3qyNCR6iGf]{Subasta narrativa del Conde Punchausen}",
+    "WFRP4eEndeavours.Link.Fanmaris": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#fanmariss-perfect-shot]{El disparo perfecto de Fanmaris}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{El disparo perfecto de Fanmaris}",
+    "WFRP4eEndeavours.Link.Leitdorf": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#the-leitdorf-defence]{La defensa Leitdorf}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RUhxuIyB9dMVRRit]{La defensa Leitdorf}",
+    "WFRP4eEndeavours.Link.Quartermaster": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#the-quartermaster-shuffle]{Lo que el intendente traspapel\u00F3}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RFeMoXNQ6qpYPwgG]{Encontrar un trabajo} y @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v1Ax92hFkPuR4xTz]{Hacer el trabajo}",
+    "WFRP4eEndeavours.Link.Brew": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.hS8fXNOVs0vTvpiD]{Preparar poci\u00F3n}.",
+    "WFRP4eEndeavours.Link.Ingredients": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.Ag868FaKOQnRTder]{Reunir ingredientes}.",
+    "WFRP4eEndeavours.Link.Familiar": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.MHvpBYGLCbhsS1jb]{Mejorar familiar}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.m8x4xAhvCFrBYcmB]{Mejorar familiar}",
+    "WFRP4eEndeavours.Link.Ritual": "@UUID[JournalEntry.CpVn7Hp5hz7NmpYu.JournalEntryPage.cA1Vf1DUTSKnit1E]{Realizar ritual}.",
+    "WFRP4eEndeavours.Link.Mapmaking": "@UUID[JournalEntry.23L6RBHmImnMR9Ir.JournalEntryPage.QxgO7D6j0pWxRfwG#mapmaking]{Creaci\u00F3n de mapas}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.kkZVd242H3PYmgiq]{Creaci\u00F3n de mapas}",
+    "WFRP4eEndeavours.Link.Trade": "@UUID[JournalEntry.23L6RBHmImnMR9Ir.JournalEntryPage.QxgO7D6j0pWxRfwG#opportune-trade]{Comercio oportuno}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.5Hm6KR2gxcZAyZML]{Comercio oportuno}",
+    "WFRP4eEndeavours.Link.Ship": "@UUID[JournalEntry.23L6RBHmImnMR9Ir.JournalEntryPage.QxgO7D6j0pWxRfwG#ship-maintenance]{Mantenimiento del barco}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RAhGd9iU42ugyzTB]{Mantenimiento del barco}",
+    "WFRP4eEndeavours.Link.Crew": "@UUID[JournalEntry.23L6RBHmImnMR9Ir.JournalEntryPage.QxgO7D6j0pWxRfwG#train-crew]{Entrenar tripulaci\u00F3n}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.M0E7H5NukVRD734B]{Entrenar tripulaci\u00F3n}",
     "WFRP4eEndeavours.Link.Deforestation": "Deforestaci\u00F3n.</b></h3><p>Quiz\u00E1s @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.gNUdm6x4ko6L4BJg]{Dobles turnos} y/o @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Z3IVWcZ3BesTlXWV]{Liderar le\u00F1adores}",
     "WFRP4eEndeavours.Link.Ancients": "Sintonizar con los Antiguos.",
     "WFRP4eEndeavours.Link.Boatbuilding": "Construcci\u00F3n de barcos.",
