--- a/lang/es.json
+++ b/lang/es.json
@@ -117,7 +117,7 @@
     "WFRP4eEndeavours.Link.Forage": "Forrajear.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forrajear}",
     "WFRP4eEndeavours.Link.Information": "Recopilar informaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Recopilar informaci\u00F3n}",
     "WFRP4eEndeavours.Link.Watch": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Montar guardia}",
-    "WFRP4eEndeavours.Link.Map": Trazar la ruta.",
+    "WFRP4eEndeavours.Link.Map": "Trazar la ruta.",
     "WFRP4eEndeavours.Link.Practice": "Practicar una habilidad.",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperar.",
     "WFRP4eEndeavours.Link.Camp": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Acampar}",
@@ -126,7 +126,7 @@
     "WFRP4eEndeavours.Link.Penance": "Penitencia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penitencia}",
     "WFRP4eEndeavours.Link.UnusualWeapon": "Entrenar con arma inusual.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v5Ak1SpPFI1w103T]{Entrenar con arma inusual}",
     "WFRP4eEndeavours.Link.MagicItem": "Probar objeto m\u00E1gico.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ylLwAYTLTIFHA0Yw]{Probar objeto m\u00E1gico]",
-    "WFRP4eEndeavours.Link.Alcatini": @UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#alcatini-method]{"M\u00E9todo Alcatini}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{M\u00E9todo Alcatini}",
+    "WFRP4eEndeavours.Link.Alcatini": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#alcatini-method]{"M\u00E9todo Alcatini}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.83QgU78rUIFABQsF]{M\u00E9todo Alcatini}",
     "WFRP4eEndeavours.Link.Punchausen": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#count-punchausens-narrative-auction]{Subasta narrativa del Conde Punchausen}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.aDttKH3qyNCR6iGf]{Subasta narrativa del Conde Punchausen}",
     "WFRP4eEndeavours.Link.Fanmaris": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#fanmariss-perfect-shot]{El disparo perfecto de Fanmaris}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.zXFw4YVj4nXE7Zet]{El disparo perfecto de Fanmaris}",
     "WFRP4eEndeavours.Link.Leitdorf": "@UUID[JournalEntry.JSMqi4MYrqsPBDUL.JournalEntryPage.NpSObNMKDAwuCeNw#the-leitdorf-defence]{La defensa Leitdorf}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.RUhxuIyB9dMVRRit]{La defensa Leitdorf}",
