--- a/lang/en.json
+++ b/lang/en.json
@@ -113,14 +113,14 @@
     "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputation}.",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Research Lore}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HZg1fkgEJW7AKrm2]{Research Lore}",
     "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Study a Mark}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.w6bgiYK0m0tE9ra3]{Study a Mark}",
-    "WFRP4eEndeavours.Link.Woodcraft": "Woodcraft.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
-    "WFRP4eEndeavours.Link.Forage": "Forage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
-    "WFRP4eEndeavours.Link.Information": "Gather Information.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
-    "WFRP4eEndeavours.Link.Watch": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
-    "WFRP4eEndeavours.Link.Map": "Map the Route.",
-    "WFRP4eEndeavours.Link.Practice": "Practice a Skill.",
-    "WFRP4eEndeavours.Link.Recuperate": "Recuperate.",
-    "WFRP4eEndeavours.Link.Camp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
+    "WFRP4eEndeavours.Link.Woodcraft": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.ydgVG7wyZMi5rmEI]{Woodcraft}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
+    "WFRP4eEndeavours.Link.Forage": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.gOYxEWeCEpGyQpz7]{Forage}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
+    "WFRP4eEndeavours.Link.Information": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.hBqb1r8DQ0yetQFk]{Gather Information}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
+    "WFRP4eEndeavours.Link.Watch": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yvdhuxcAAkxkklmf]{Keep Watch}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
+    "WFRP4eEndeavours.Link.Map": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.SiADDCab9kI0BAJR]{Map the Route}.",
+    "WFRP4eEndeavours.Link.Practice": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yRShdcqphDDsrve5]{Practice a Skill}.",
+    "WFRP4eEndeavours.Link.Recuperate": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.pSXKs5wkCogMJist]{Recuperate}.",
+    "WFRP4eEndeavours.Link.Camp": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.2fJCV0zDeqoGZjqq]{Make Camp}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
     "WFRP4eEndeavours.Link.College": "College Research.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{College Research}",
     "WFRP4eEndeavours.Link.Patronage": "Patronage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patronage}",
     "WFRP4eEndeavours.Link.Penance": "Penance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penance}",
