--- a/lang/en.json
+++ b/lang/en.json
@@ -161,46 +161,46 @@
     "WFRP4eEndeavours.Link.Visionaries": "No Use for Visionaries.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Y8S3DwkxYEFpMUdM]{Foment Dissent with Rosendorn}.<br>Then @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{Rosendorn's Prophecy} for Rosendorn",
     "WFRP4eEndeavours.Link.Witness": "Bear Witness.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Bear Witness}",
 
-    "WFRP4eEndeavours.Title.Animal": " - Animal Training",
-    "WFRP4eEndeavours.Title.Expert": " - Find an Expert",
-    "WFRP4eEndeavours.Title.DissentCharm": " - Foment Dissent (Charm)",
-    "WFRP4eEndeavours.Title.DissentGossip": " - Foment Dissent (Gossip)",
-    "WFRP4eEndeavours.Title.Combat": " - Combat Training",
-    "WFRP4eEndeavours.Title.News": " - The Latest News",
-    "WFRP4eEndeavours.Title.Research": " - Research Lore",
-    "WFRP4eEndeavours.Title.Mark": " - Study a Mark",
-    "WFRP4eEndeavours.Title.Woodcraft": " - Woodcraft",
-    "WFRP4eEndeavours.Title.Forage": " - Forage",
-    "WFRP4eEndeavours.Title.Information": " - Gather Information",
-    "WFRP4eEndeavours.Title.Watch": " - Keep Watch",
-    "WFRP4eEndeavours.Title.CampRest": " - Make Camp (Rest)",
-    "WFRP4eEndeavours.Title.CampHeal": " - Make Camp (Heal)",
-    "WFRP4eEndeavours.Title.College": " - College Research",
-    "WFRP4eEndeavours.Title.Patronage": " - Patronage",
-    "WFRP4eEndeavours.Title.Penance": " - Penance",
-    "WFRP4eEndeavours.Title.UnusualWeapon": " - Train with Unusual Weapon",
-    "WFRP4eEndeavours.Title.MagicItem": " - Test Magic Item",
-    "WFRP4eEndeavours.Title.Alcatini": " - Alcatini Method",
-    "WFRP4eEndeavours.Title.Punchausen": " - Count Punchausen's Narrative Auction",
-    "WFRP4eEndeavours.Title.Fanmaris": " - Fanmaris's Perfect Shot",
-    "WFRP4eEndeavours.Title.Leitdorf": " - The Leitdorf Defence",
-    "WFRP4eEndeavours.Title.Job": " - Find a Job",
-    "WFRP4eEndeavours.Title.Job2": " - Do the Job",
-    "WFRP4eEndeavours.Title.Familiar": " - Improve Familiar",
-    "WFRP4eEndeavours.Title.Mapmaking": " - Mapmaking",
-    "WFRP4eEndeavours.Title.Trade": " - Opportune Trade",
-    "WFRP4eEndeavours.Title.Ship": " - Ship Maintenance",
-    "WFRP4eEndeavours.Title.Crew": " - Train Crew",
-    "WFRP4eEndeavours.Title.DoubleShifts": " - Double Shifts",
-    "WFRP4eEndeavours.Title.Woodcutters": " - Leading Woodcutters",
-    "WFRP4eEndeavours.Title.Entertaining": " - Entertaining",
-    "WFRP4eEndeavours.Title.Shelter": " - Find Shelter",
-    "WFRP4eEndeavours.Title.ForageforFood": " - Forage for Food",
-    "WFRP4eEndeavours.Title.Boat": " - Repair a Boat",
-    "WFRP4eEndeavours.Title.Skaven": " - A Study in Skaven",
-    "WFRP4eEndeavours.Title.Null": " - Resist Null",
-    "WFRP4eEndeavours.Title.Visionaries": " - Rosendorn's Prophecy",
-    "WFRP4eEndeavours.Title.Witness": " - Bear Witness",
+    "WFRP4eEndeavours.Title.Animal": "Animal Training",
+    "WFRP4eEndeavours.Title.Expert": "Find an Expert",
+    "WFRP4eEndeavours.Title.DissentCharm": "Foment Dissent (Charm)",
+    "WFRP4eEndeavours.Title.DissentGossip": "Foment Dissent (Gossip)",
+    "WFRP4eEndeavours.Title.Combat": "Combat Training",
+    "WFRP4eEndeavours.Title.News": "The Latest News",
+    "WFRP4eEndeavours.Title.Research": "Research Lore",
+    "WFRP4eEndeavours.Title.Mark": "Study a Mark",
+    "WFRP4eEndeavours.Title.Woodcraft": "Woodcraft",
+    "WFRP4eEndeavours.Title.Forage": "Forage",
+    "WFRP4eEndeavours.Title.Information": "Gather Information",
+    "WFRP4eEndeavours.Title.Watch": "Keep Watch",
+    "WFRP4eEndeavours.Title.CampRest": "Make Camp (Rest)",
+    "WFRP4eEndeavours.Title.CampHeal": "Make Camp (Heal)",
+    "WFRP4eEndeavours.Title.College": "College Research",
+    "WFRP4eEndeavours.Title.Patronage": "Patronage",
+    "WFRP4eEndeavours.Title.Penance": "Penance",
+    "WFRP4eEndeavours.Title.UnusualWeapon": "Train with Unusual Weapon",
+    "WFRP4eEndeavours.Title.MagicItem": "Test Magic Item",
+    "WFRP4eEndeavours.Title.Alcatini": "Alcatini Method",
+    "WFRP4eEndeavours.Title.Punchausen": "Count Punchausen's Narrative Auction",
+    "WFRP4eEndeavours.Title.Fanmaris": "Fanmaris's Perfect Shot",
+    "WFRP4eEndeavours.Title.Leitdorf": "The Leitdorf Defence",
+    "WFRP4eEndeavours.Title.Job": "Find a Job",
+    "WFRP4eEndeavours.Title.Job2": "Do the Job",
+    "WFRP4eEndeavours.Title.Familiar": "Improve Familiar",
+    "WFRP4eEndeavours.Title.Mapmaking": "Mapmaking",
+    "WFRP4eEndeavours.Title.Trade": "Opportune Trade",
+    "WFRP4eEndeavours.Title.Ship": "Ship Maintenance",
+    "WFRP4eEndeavours.Title.Crew": "Train Crew",
+    "WFRP4eEndeavours.Title.DoubleShifts": "Double Shifts",
+    "WFRP4eEndeavours.Title.Woodcutters": "Leading Woodcutters",
+    "WFRP4eEndeavours.Title.Entertaining": "Entertaining",
+    "WFRP4eEndeavours.Title.Shelter": "Find Shelter",
+    "WFRP4eEndeavours.Title.ForageforFood": "Forage for Food",
+    "WFRP4eEndeavours.Title.Boat": "Repair a Boat",
+    "WFRP4eEndeavours.Title.Skaven": "A Study in Skaven",
+    "WFRP4eEndeavours.Title.Null": "Resist Null",
+    "WFRP4eEndeavours.Title.Visionaries": "Rosendorn's Prophecy",
+    "WFRP4eEndeavours.Title.Witness": "Bear Witness",
 
     "WFRP4eEndeavours.Failure.Animal": "<p>Your animal needs more training.</p>",
     "WFRP4eEndeavours.Failure.Expert": "<p>Still didn't find an expert.</p>",
