--- a/lang/es.json
+++ b/lang/es.json
@@ -161,46 +161,46 @@
     "WFRP4eEndeavours.Link.Visionaries": "Ning\u00FAn uso para los visionarios.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Y8S3DwkxYEFpMUdM]{Fomentar la discordia con Rosendorn}.<br>Despu\u00E9s @UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.ZYiQGec6Gi6K85lz]{La profec\u00EDa de Rosendorn} para Rosendorn",
     "WFRP4eEndeavours.Link.Witness": "Atestigua.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.dJZMhU1DKTmdvy8S]{Atestigua}",
 
-    "WFRP4eEndeavours.Title.Animal": " - Adiestrar animal",
-    "WFRP4eEndeavours.Title.Expert": " - Encontar un experto",
-    "WFRP4eEndeavours.Title.DissentCharm": " - Fomentar la discordia (Carisma)",
-    "WFRP4eEndeavours.Title.DissentGossip": " - Fomentar la discordia (Cotilleo)",
-    "WFRP4eEndeavours.Title.Combat": " - Entrenamiento en combate",
-    "WFRP4eEndeavours.Title.News": " - \u00DAltimas noticias",
-    "WFRP4eEndeavours.Title.Research": " - Investigar un Saber",
-    "WFRP4eEndeavours.Title.Mark": " - Estudiar a una v\u00EDctima",
-    "WFRP4eEndeavours.Title.Woodcraft": " - Conocimiento del bosque",
-    "WFRP4eEndeavours.Title.Forage": " - Forrajear",
-    "WFRP4eEndeavours.Title.Information": " - Recopilar informaci\u00F3n",
-    "WFRP4eEndeavours.Title.Watch": " - Montar guardia",
-    "WFRP4eEndeavours.Title.CampRest": " - Acampar (Descansar)",
-    "WFRP4eEndeavours.Title.CampHeal": " - Acampar (Sanar)",
-    "WFRP4eEndeavours.Title.College": " - Investigaci\u00F3n en Colegio",
-    "WFRP4eEndeavours.Title.Patronage": " - Patrocinio",
-    "WFRP4eEndeavours.Title.Penance": " - Penitencia",
-    "WFRP4eEndeavours.Title.UnusualWeapon": " - Entrenar con arma inusual",
-    "WFRP4eEndeavours.Title.MagicItem": " - Probar objeto m\u00E1gico",
-    "WFRP4eEndeavours.Title.Alcatini": " - M\u00E9todo Alcatini",
-    "WFRP4eEndeavours.Title.Punchausen": " - Subasta narrativa del Conde Punchausen",
-    "WFRP4eEndeavours.Title.Fanmaris": " - El disparo perfecto de Fanmaris",
-    "WFRP4eEndeavours.Title.Leitdorf": " - La defensa Leitdorf",
-    "WFRP4eEndeavours.Title.Job": " - Encontrar un trabajo",
-    "WFRP4eEndeavours.Title.Job2": " - Hacer el trabajo",
-    "WFRP4eEndeavours.Title.Familiar": " - Mejorar familiar",
-    "WFRP4eEndeavours.Title.Mapmaking": " - Creaci\u00F3n de mapas",
-    "WFRP4eEndeavours.Title.Trade": " - Comercio oportuno",
-    "WFRP4eEndeavours.Title.Ship": " - Mantenimiento del barco",
-    "WFRP4eEndeavours.Title.Crew": " - Entrenar tripulaci\u00F3n",
-    "WFRP4eEndeavours.Title.DoubleShifts": " - Dobles turnos",
-    "WFRP4eEndeavours.Title.Woodcutters": " - Liderar le\u00F1adores",
-    "WFRP4eEndeavours.Title.Entertaining": " - Animar",
-    "WFRP4eEndeavours.Title.Shelter": " - Encontrar refugio",
-    "WFRP4eEndeavours.Title.ForageforFood": " - Forrajear comida",
-    "WFRP4eEndeavours.Title.Boat": " - Reparar un barco",
-    "WFRP4eEndeavours.Title.Skaven": " - Estudio en Skaven",
-    "WFRP4eEndeavours.Title.Null": " - Resistir la Nulidad",
-    "WFRP4eEndeavours.Title.Visionaries": " - La profec\u00EDa de Rosendorn",
-    "WFRP4eEndeavours.Title.Witness": " - Atestigua",
+    "WFRP4eEndeavours.Title.Animal": "Adiestrar animal",
+    "WFRP4eEndeavours.Title.Expert": "Encontar un experto",
+    "WFRP4eEndeavours.Title.DissentCharm": "Fomentar la discordia (Carisma)",
+    "WFRP4eEndeavours.Title.DissentGossip": "Fomentar la discordia (Cotilleo)",
+    "WFRP4eEndeavours.Title.Combat": "Entrenamiento en combate",
+    "WFRP4eEndeavours.Title.News": "\u00DAltimas noticias",
+    "WFRP4eEndeavours.Title.Research": "Investigar un Saber",
+    "WFRP4eEndeavours.Title.Mark": "Estudiar a una v\u00EDctima",
+    "WFRP4eEndeavours.Title.Woodcraft": "Conocimiento del bosque",
+    "WFRP4eEndeavours.Title.Forage": "Forrajear",
+    "WFRP4eEndeavours.Title.Information": "Recopilar informaci\u00F3n",
+    "WFRP4eEndeavours.Title.Watch": "Montar guardia",
+    "WFRP4eEndeavours.Title.CampRest": "Acampar (Descansar)",
+    "WFRP4eEndeavours.Title.CampHeal": "Acampar (Sanar)",
+    "WFRP4eEndeavours.Title.College": "Investigaci\u00F3n en Colegio",
+    "WFRP4eEndeavours.Title.Patronage": "Patrocinio",
+    "WFRP4eEndeavours.Title.Penance": "Penitencia",
+    "WFRP4eEndeavours.Title.UnusualWeapon": "Entrenar con arma inusual",
+    "WFRP4eEndeavours.Title.MagicItem": "Probar objeto m\u00E1gico",
+    "WFRP4eEndeavours.Title.Alcatini": "M\u00E9todo Alcatini",
+    "WFRP4eEndeavours.Title.Punchausen": "Subasta narrativa del Conde Punchausen",
+    "WFRP4eEndeavours.Title.Fanmaris": "El disparo perfecto de Fanmaris",
+    "WFRP4eEndeavours.Title.Leitdorf": "La defensa Leitdorf",
+    "WFRP4eEndeavours.Title.Job": "Encontrar un trabajo",
+    "WFRP4eEndeavours.Title.Job2": "Hacer el trabajo",
+    "WFRP4eEndeavours.Title.Familiar": "Mejorar familiar",
+    "WFRP4eEndeavours.Title.Mapmaking": "Creaci\u00F3n de mapas",
+    "WFRP4eEndeavours.Title.Trade": "Comercio oportuno",
+    "WFRP4eEndeavours.Title.Ship": "Mantenimiento del barco",
+    "WFRP4eEndeavours.Title.Crew": "Entrenar tripulaci\u00F3n",
+    "WFRP4eEndeavours.Title.DoubleShifts": "Dobles turnos",
+    "WFRP4eEndeavours.Title.Woodcutters": "Liderar le\u00F1adores",
+    "WFRP4eEndeavours.Title.Entertaining": "Animar",
+    "WFRP4eEndeavours.Title.Shelter": "Encontrar refugio",
+    "WFRP4eEndeavours.Title.ForageforFood": "Forrajear comida",
+    "WFRP4eEndeavours.Title.Boat": "Reparar un barco",
+    "WFRP4eEndeavours.Title.Skaven": "Estudio en Skaven",
+    "WFRP4eEndeavours.Title.Null": "Resistir la Nulidad",
+    "WFRP4eEndeavours.Title.Visionaries": "La profec\u00EDa de Rosendorn",
+    "WFRP4eEndeavours.Title.Witness": "Atestigua",
 
     "WFRP4eEndeavours.Failure.Animal": "<p>Tu animal necesita m\u00E1s entrenamiento.</p>",
     "WFRP4eEndeavours.Failure.Expert": "<p>A\u00FAn no has encontrado un experto</p>",
